spacing being fixed

--- a/src/Components/Molecules/ImageCardSection.css
+++ b/src/Components/Molecules/ImageCardSection.css
@@ -17,7 +17,13 @@
     border: none;
 }
 
+.card-body {
+    padding: 5px;
+}
+
+
 .title {
+    text-transform: uppercase;
     font-size: 12px;
     color: black;
 }
